# cartloader

./: .gitignore  .gitmodules  404.html  Dockerfile  LICENSE  README.md  entrypoint.sh  index.html  install_r_packages.R  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
INSTALLATION/: index.html
assets/: fixed_color_map_256.tsv  fixed_color_map_256.v2.tsv  fixed_color_map_52.tsv  fixed_color_map_60.tsv  input.yaml  input_stitch.yaml  visiumhd_space_ranger_assets.visiumhd_3prime_mouse_brain.json
cartloader/: cli.py  run_ficture.py  sge_convert.md  sge_convert.py  tmp.py
css/: extra.css
docs/: INSTALLATION.md  index.md  installation.md
examples/: xenium_v1_mouse_brain_coronal_subset_end_to_end.docker.sh  xenium_v1_mouse_brain_coronal_subset_end_to_end.local.sh
includes/: contact-us.md  glossary.md  includemd_vigenettes_inputformat_cosmxsmi.md  includemd_vigenettes_inputformat_merscope.md  includemd_vigenettes_inputformat_pixelseq.md  includemd_vigenettes_inputformat_seqscope.md  includemd_vigenettes_inputformat_stereoseq.md  includemd_vigenettes_inputformat_visiumhd.md  includemd_vigenettes_inputformat_xenium.md  includemd_vigenettes_output_cosmxsmi.md  includemd_vigenettes_output_merscope.md  includemd_vigenettes_output_pixelseq.md  includemd_vigenettes_output_seqscope.md  includemd_vigenettes_output_stereoseq.md  includemd_vigenettes_output_visiumhd.md  includemd_vigenettes_output_xenium.md  includemd_vigenettes_run_cartload2.md  includemd_vigenettes_run_cartload2_docker.md  includemd_vigenettes_run_ficture2.md  (+15 more)
installation/: index.html  (+3 more)
(+271 files in other folders)
